oggdec: fix memleak on header parsing failure

Fixes Ticket1931

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>